5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1616_2940.log
== TEST (2019-04-01 15:08:46) 
-- CODE:
Vi = input("digite um valor: ")
j = input ("digite uma taxa: ")
n = input("digite a quantidade de meses: ")

math from imported *

Vf = Vi (1 + j) ** n

print(round(Vf, 2))
-- ERROR:
File "XXXX", line 5
    math from imported *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:07) 
-- CODE:
Vi = input("digite um valor: ")
j = input ("digite uma taxa: ")
n = input("digite a quantidade de meses: ")

Vf = Vi (1 + j) ** n

print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Vf = Vi (1 + j) ** n
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:56) 
-- CODE:
Vi = float(input("digite um valor: "))
j = float(input ("digite uma taxa: "))
n = float(input("digite a quantidade de meses: "))

Vf = Vi (1 + j) ** n

print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Vf = Vi (1 + j) ** n
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:27) 
-- CODE:
Vi = float(input("digite um valor: "))
j = float(input ("digite uma taxa: "))
n = float(input("digite a quantidade de meses: "))

Vf = Vi (1 + j) ** n

print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Vf = Vi (1 + j) ** n
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:57) 
-- CODE:
Vi = float(input("digite um valor: "))
j = float(input ("digite uma taxa: "))
n = float(input("digite a quantidade de meses: "))

Vf = Vi * (1 + j) ** n

print(round(Vf, 2))
-- OUTPUT:
24798.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:10:58) 
-- CODE:
Vi = float(input("digite um valor: "))
j = float(input ("digite uma taxa: "))
n = float(input("digite a quantidade de meses: "))

Vf = Vi * (1 + j) ** n

print(round(Vf, 2))
-- EXECUTION TIME:
0.129266
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
